RESOLVED FIXED 196892
Throw TypeError when custom element constructor returns a wrong element or tries to create itself
https://bugs.webkit.org/show_bug.cgi?id=196892
Summary Throw TypeError when custom element constructor returns a wrong element or tr...
Ryosuke Niwa
Reported 2019-04-12 19:56:33 PDT
Throw TypeError when custom element constructor returns a wrong element or tries to create itself
Attachments
Changes the exception type (13.74 KB, patch)
2019-04-12 19:58 PDT, Ryosuke Niwa
dino: review+
Ryosuke Niwa
Comment 1 2019-04-12 19:58:54 PDT
Created attachment 367374 [details] Changes the exception type
Dean Jackson
Comment 2 2019-04-15 14:13:12 PDT
Comment on attachment 367374 [details] Changes the exception type Is this a new import of the WPT tests? Or will you contribute the change?
Ryosuke Niwa
Comment 3 2019-04-15 14:28:44 PDT
(In reply to Dean Jackson from comment #2) > Comment on attachment 367374 [details] > Changes the exception type > > Is this a new import of the WPT tests? Or will you contribute the change? It's merged in https://github.com/web-platform-tests/wpt/pull/16328 already.
Ryosuke Niwa
Comment 4 2019-04-15 14:45:27 PDT
Comment on attachment 367374 [details] Changes the exception type View in context: https://bugs.webkit.org/attachment.cgi?id=367374&action=review > LayoutTests/imported/w3c/ChangeLog:8 > + Update the tests according to https://github.com/whatwg/html/pull/4525. Oh oops, this should have been pointing to https://github.com/web-platform-tests/wpt/pull/16328 instead.
Ryosuke Niwa
Comment 5 2019-04-15 14:49:08 PDT
Radar WebKit Bug Importer
Comment 6 2019-04-15 14:50:19 PDT
Note You need to log in before you can comment on or make changes to this bug.